Update env to use a new test email account

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL="dan.taylor1493@gmail.com"
-PASSWORD="ykqc ojhv jgxs dzpk"
+EMAIL="pythonscript25.test@gmail.com"
+PASSWORD="bnkx hhbw vbzl ickn"
